--- a/TTTEEAAA/useredit.html
+++ b/TTTEEAAA/useredit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>useredit</title>
+    <title>user</title>
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Source+Sans+Pro:400" rel="stylesheet">
@@ -33,9 +33,9 @@
                 <div class="dropdown-menu text-center">
                   <a class="dropdown-item" href="login.html">登入</a>
                   <a class="dropdown-item" href="signup.html">註冊</a>
-                  <a class="dropdown-item" href="#">會員中心</a>
+                  <a class="dropdown-item" href="useredit.html">會員中心</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">購物車</a>
+                  <a class="dropdown-item" href="cheakout.html">購物車</a>
                 </div>      
             </div>
         </div>
@@ -63,8 +63,165 @@
                 </ul>
               </div>
     </header>
-    	<div class="A">
-    	<form method="post" action=""><center><h5>編輯個人資料</h5><br>
+
+    <!--
+      <aside>
+        <div class="container-fluid pt-3">
+            <ul class="nav flex-column navbar-sm">
+                <li class="nav-item">
+                    <a href="#useredit" class="text-dark"><h5>編輯個人資料</h5></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#baught" class="text-dark"><h5>購物紀錄</h5></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#comment" class="text-dark"><h5>評論紀錄</h5></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#love" class="text-dark"><h5>我的收藏</h5></a>
+                </li>
+            </ul>
+            
+        </div>
+    </aside>
+  -->
+<section>
+  <div class="container-fluid pt-3">
+      <div class="row">
+          <div class="col-2">
+            <div class="list-group" id="list-tab" role="tablist">
+              <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">編輯個人資料</a>
+              <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">購物紀錄</a>
+              <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">評論紀錄</a>
+              <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">我的收藏</a>
+            </div>
+          </div>
+          <div class="col-10">
+            <div class="tab-content" id="nav-tabContent">
+              <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                  <form method="post" action="">
+                      <div class="A mt-1">
+                          <form method="post" action="">
+                            <a name="useredit">
+                              <center>
+                                <h5>編輯個人資料</h5><br>
+                            <div class="B">
+                            <br>&nbsp&nbsp&nbsp&nbsp舊密碼：<input type="text" name="username" size="20" ><br>
+                            &nbsp&nbsp&nbsp&nbsp新密碼：<input type="password" name="password" size="20" ><br>
+                                確認密碼：<input type="password" name="password" size="20" ><br><br>
+                            <button type="submit" class="btn btn-outline-danger ">確定</button>
+                            <button type="button" class="btn btn-outline-danger ">取消</button>
+                            <br>
+                            <br>
+                          </div>
+                        </center>
+                          </form> 
+                        </a>
+                      </div>
+              </div>
+              <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                  <div class="pt-3 pb-3 pl-3 pr-3">
+                      <a name="baught">
+                      <center>
+                        <h4>購物紀錄</h4>
+                      <table>
+                        <tr>
+                          <td><img src="img/good9.jpg" width="100px"></td>
+                          <td>名稱:魚池紅玉紅茶</td>
+                          <td>數量:1</td>
+                          <td>價錢:100</td>
+                          <td>日期:2019/12/1</td>
+                        </tr>
+                        <tr>
+                          <td><img src="img/good7.jpg" width="100px"></td>
+                          <td>名稱:粉玫瑰花茶</td>
+                          <td>數量:1</td>
+                          <td>價錢:100</td>
+                          <td>日期:2019/12/2</td>
+                        </tr>
+                        <tr>
+                          <td><img src="img/good4.jpg" width="100px"></td>
+                          <td>名稱:薄荷康福茶</td>
+                          <td>數量:1</td>
+                          <td>價錢:100</td>
+                          <td>日期:2019/12/3</td>
+                        </tr>
+                      </table>
+                      </center>
+                    </a>
+                    </div>
+              </div>
+              <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                  <div>
+                      <a name="comment">
+                      <center>
+                        <h4>評論紀錄</h4>
+                     <div class="row">
+                                <div class="col-sm-1  align-items-center">
+                                    <img src="img/good2.jpg" class="img-fluid ml-5" width="100">
+                                </div>
+                                <div class="col-sm">
+                                    <div class="border-light rounded shadow-sm bg-white mt-3 pt-3 pb-3 pl-3 pr-3 textwidth">
+                                        <h5>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</h5>
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
+                     <div class="row">
+                                <div class="col-sm-1  align-items-center">
+                                    <img src="img/good5.jpg" class="img-fluid ml-5" width="100">
+                                </div>
+                                <div class="col-sm">
+                                    <div class="border-light rounded shadow-sm bg-white mt-3 pt-3 pb-3 pl-3 pr-3 textwidth">
+                                        <h5>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</h5>
+                                    </div>
+                                </div>
+                            </div>
+                      </center>
+                      </a>
+                    </div>
+              </div>
+              <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+                  <div>
+                      <a name="love">
+                      <center>
+                        <h4>我的收藏</h4>
+                      <table>
+                        <tr>
+                          <td><img src="img/good9.jpg" width="100px"></td>
+                          <td><a href="good9.html">名稱:魚池紅玉紅茶</a></td>
+                          <td><button type="button" class="btn btn-outline-danger ">刪除</button></td>
+                        </tr>
+                        <tr>
+                          <td><img src="img/good7.jpg" width="100px"></td>
+                          <td> <a href="good7.html">名稱:粉玫瑰花茶</a></td>
+                          <td><button type="button" class="btn btn-outline-danger ">刪除</button></td>
+                        </tr>
+                        <tr>
+                          <td><img src="img/good4.jpg" width="100px"></td>
+                          <td><a href="good4.html">名稱:薄荷康福茶</a></td>
+                          <td><button type="button" class="btn btn-outline-danger ">刪除</button></td>
+                        </tr>
+                        <tr>
+                          <td><img src="img/good1.jpg" width="100px"></td>
+                          <td><a href="good1.html">名稱:愛爾蘭奶油紅茶</a></td>
+                          <td><button type="button" class="btn btn-outline-danger ">刪除</button></td>
+                        </tr>
+                      </table>
+                      </center>
+                      </a>
+                    </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  </div>
+<!--
+    	<div class="A mt-1">
+    	<form method="post" action="">
+        <a name="useredit">
+          <center>
+            <h5>編輯個人資料</h5><br>
     		<div class="B">
     		<br>&nbsp&nbsp&nbsp&nbsp舊密碼：<input type="text" name="username" size="20" ><br>
     		&nbsp&nbsp&nbsp&nbsp新密碼：<input type="password" name="password" size="20" ><br>
@@ -76,8 +233,104 @@
 			</div>
 		</center>
     	</form> 
+    </a>
 		</div>
-   
+    <hr>
+
+    <div class="pt-3 pb-3 pl-3 pr-3">
+      <a name="baught">
+      <center>
+        <h4>購物紀錄</h4>
+      <table>
+        <tr>
+          <td><img src="img/good9.jpg" width="100px"></td>
+          <td>名稱:魚池紅玉紅茶</td>
+          <td>數量:1</td>
+          <td>價錢:100</td>
+          <td>日期:2019/12/1</td>
+        </tr>
+        <tr>
+          <td><img src="img/good7.jpg" width="100px"></td>
+          <td>名稱:粉玫瑰花茶</td>
+          <td>數量:1</td>
+          <td>價錢:100</td>
+          <td>日期:2019/12/2</td>
+        </tr>
+        <tr>
+          <td><img src="img/good4.jpg" width="100px"></td>
+          <td>名稱:薄荷康福茶</td>
+          <td>數量:1</td>
+          <td>價錢:100</td>
+          <td>日期:2019/12/3</td>
+        </tr>
+      </table>
+      </center>
+    </a>
+    </div>
+      <hr>
+
+    <div>
+      <a name="comment">
+      <center>
+        <h4>評論紀錄</h4>
+     <div class="row">
+                <div class="col-sm-1  align-items-center">
+                    <img src="img/good2.jpg" class="img-fluid ml-5" width="100">
+                </div>
+                <div class="col-sm">
+                    <div class="border-light rounded shadow-sm bg-white mt-3 pt-3 pb-3 pl-3 pr-3 textwidth">
+                        <h5>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</h5>
+                    </div>
+                </div>
+            </div>
+            <br>
+     <div class="row">
+                <div class="col-sm-1  align-items-center">
+                    <img src="img/good5.jpg" class="img-fluid ml-5" width="100">
+                </div>
+                <div class="col-sm">
+                    <div class="border-light rounded shadow-sm bg-white mt-3 pt-3 pb-3 pl-3 pr-3 textwidth">
+                        <h5>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</h5>
+                    </div>
+                </div>
+            </div>
+      </center>
+      </a>
+    </div>
+    <hr>
+
+    <div>
+      <a name="love">
+      <center>
+        <h4>我的收藏</h4>
+      <table>
+        <tr>
+          <td><img src="img/good9.jpg" width="100px"></td>
+          <td><a href="good9.html">名稱:魚池紅玉紅茶</a></td>
+          <td><button type="button" class="btn btn-outline-danger ">刪除</button></td>
+        </tr>
+        <tr>
+          <td><img src="img/good7.jpg" width="100px"></td>
+          <td> <a href="good7.html">名稱:粉玫瑰花茶</a></td>
+          <td><button type="button" class="btn btn-outline-danger ">刪除</button></td>
+        </tr>
+        <tr>
+          <td><img src="img/good4.jpg" width="100px"></td>
+          <td><a href="good4.html">名稱:薄荷康福茶</a></td>
+          <td><button type="button" class="btn btn-outline-danger ">刪除</button></td>
+        </tr>
+        <tr>
+          <td><img src="img/good1.jpg" width="100px"></td>
+          <td><a href="good1.html">名稱:愛爾蘭奶油紅茶</a></td>
+          <td><button type="button" class="btn btn-outline-danger ">刪除</button></td>
+        </tr>
+      </table>
+      </center>
+      </a>
+    </div>
+  -->
+</section>
+
     <footer>
         <br>
             <div class="container-fluid text-center pt-3 pb-2 bg-info" >
