--- a/TTTEEAAA/index.html
+++ b/TTTEEAAA/index.html
@@ -29,9 +29,9 @@
                 <div class="dropdown-menu text-center">
                   <a class="dropdown-item" href="login.html">登入</a>
                   <a class="dropdown-item" href="signup.html">註冊</a>
-                  <a class="dropdown-item" href="#">會員中心</a>
+                  <a class="dropdown-item" href="useredit.html">會員中心</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">購物車</a>
+                  <a class="dropdown-item" href="cheakout.html">購物車</a>
                 </div>      
             </div>
         </div>
