--- a/TTTEEAAA/aboutus.html
+++ b/TTTEEAAA/aboutus.html
@@ -13,15 +13,6 @@
     <link rel="stylesheet" href="/Public/css/bootstrap.min.css">
     <link rel="stylesheet" href="/Public/img/main.css">
 
-    <script type="text/javascript"> 
-function show_menu(nom_menu) { 
-    document.getElementById(nom_menu).style.display='block'; 
-} 
-
-function hide_menu(nom_menu){ 
-    document.getElementById(nom_menu).style.display='none'; 
-} 
-</script> 
 </head>
 <body background="1.png">
     <header>
@@ -52,7 +43,7 @@ function hide_menu(nom_menu){
         <div class="container-fluid bg-info">
                 <ul class="nav nav-fill">
                   <li class="nav-item">
-                    <a class="nav-link active text-white" href="#HOT"><h4>熱銷商品</h4></a>
+                    <a class="nav-link active text-white" href="index.html#HOT"><h4>熱銷商品</h4></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-white" href="abouttea.html"><h4>關於茶</h4></a>
@@ -72,20 +63,7 @@ function hide_menu(nom_menu){
                 </ul>
               </div>
     </header>
-    <section1>
-      <div id="ss_menu_marque_root" onmouseover="show_menu('ss_menu_marque_1');" onmouseout="hide_menu('ss_menu_marque_1');"> 
-    <a href="marque.php"><img src="img/202.jpg" width="150"></a> 
-    <div id="ss_menu_marque_1" style="display: none"> 
-     <div onmouseover="show_menu('ss_menu_marque_11');" onmouseout="hide_menu('ss_menu_marque_11');"> 
-      安安我是林之歡!
-      </div> 
-      </div> 
-      </div> 
-    </section1>
-
    
-
-    
     <footer>
         <br>
             <div class="container-fluid text-center pt-3 pb-2 bg-info" >
