--- a/TTTEEAAA/index.html
+++ b/TTTEEAAA/index.html
@@ -72,15 +72,17 @@
                                 <li data-target="#downbottom" data-slide-to="2"></li>
                             </ol>
                             <div class="carousel-inner">
+                            	<center>
                                 <div class="carousel-item active">
-                                    <img src="img/12.png" class="img-thumbnail d-block w-100">
+                                    <img src="img/b1.png" class="img-thumbnail d-block w-75">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/12.png" class="img-thumbnail d-block w-100" >
+                                    <img src="img/b2.png" class="img-thumbnail d-block w-75" >
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/12.png" class="img-thumbnail d-block w-100">
+                                    <img src="img/b3.png" class="img-thumbnail d-block w-75">
                                 </div>
+                            </center>
                             </div>
                         </div>
                     </div>
