--- a/TTTEEAAA/abouttea.html
+++ b/TTTEEAAA/abouttea.html
@@ -14,21 +14,19 @@
     <link rel="stylesheet" href="/Public/img/main.css">
 
 </head>
-<body background="img/1.png">
+<body background="img/bg3.jpg">
   <!-- 回到頂端按鈕 -->
   <button type="button" id="BackTop" class="toTop-arrow"></button>
   <header>
       <!--logo登入註冊-->
-      <div class="container-fluid bg-info">
+      <div class="container-fluid T">
           <div class="nav  align-items-start ">
               <nav class="navbar mr-auto" >
                   <a href="index.html"><img src="img/logo1.png" class="img-fluid logosize"
                     onmouseover="this.src='img/logo2.png'" 
                     onmouseout="this.src='img/logo1.png'"></a>
               </nav>
-              <nav class="navbar mr-auto" >
-                  <h3 class="text-white">TEA</h3>
-              </nav>
+              
               <button type="button" class="btn dropdown-toggle-split downbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fa fa-bars"></i>
               </button>
@@ -42,7 +40,7 @@
           </div>
       </div>
       <!--選單-->
-      <div class="container-fluid bg-info">
+      <div class="container-fluid T">
               <ul class="nav nav-fill">
                 <li class="nav-item">
                   <a class="nav-link active text-white" href="index.html#HOT"><h4>熱銷商品</h4></a>
@@ -95,7 +93,7 @@
    
     <footer>
         <br>
-            <div class="container-fluid text-center pt-3 pb-2 bg-info" >
+            <div class="container-fluid text-center pt-3 pb-2 T" >
                 <h4>Copyright &copy 2019 by 第十組</h4>
             </div>
     </footer>
