--- a/TTTEEAAA/good5.html
+++ b/TTTEEAAA/good5.html
@@ -30,21 +30,19 @@
 
     <script src="assets/js/star.js" type="text/javascript"></script>
 </head>
-<body background="img/1.png">
+<body background="img/bg3.jpg">
   <!-- 回到頂端按鈕 -->
   <button type="button" id="BackTop" class="toTop-arrow"></button>
     <header>
             <!--logo登入註冊-->
-            <div class="container-fluid bg-info">
+            <div class="container-fluid T">
                 <div class="nav  align-items-start ">
                     <nav class="navbar mr-auto" >
                         <a href="index.html"><img src="img/logo1.png" class="img-fluid logosize"
                           onmouseover="this.src='img/logo2.png'" 
                           onmouseout="this.src='img/logo1.png'"></a>
                     </nav>
-                    <nav class="navbar mr-auto" >
-                        <h3 class="text-white">TEA</h3>
-                    </nav>
+                    
                     <button type="button" class="btn dropdown-toggle-split downbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fa fa-bars"></i>
                     </button>
@@ -58,7 +56,7 @@
                 </div>
             </div>
             <!--選單-->
-            <div class="container-fluid bg-info">
+            <div class="container-fluid T">
                     <ul class="nav nav-fill">
                       <li class="nav-item">
                         <a class="nav-link active text-white" href="index.html#HOT"><h4>熱銷商品</h4></a>
@@ -83,30 +81,38 @@
         </header>
     <aside>
         <div class="container-fluid pt-3">
-            <ul class="nav flex-column navbar-sm">
+            <ul class="nav flex-column navbar-sm E">
                 <li class="nav-item">
                     <a href="good1.html" class="text-dark"><h5>愛爾蘭奶油紅茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good2.html" class="text-dark"><h5>南非國寶茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good3.html" class="text-dark"><h5>檸檬香茅茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good4.html" class="text-dark"><h5>薄荷康福茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good5.html" class="text-dark"><h5>杏桃烏龍茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good6.html" class="text-dark"><h5>沁涼薄荷紅茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good7.html" class="text-dark"><h5>粉玫瑰花茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good8.html" class="text-dark"><h5>薰衣草茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good9.html" class="text-dark"><h5>魚池紅玉紅茶</h5></a>
@@ -120,7 +126,7 @@
         <div class="container-fluid pt-3 pb-3">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="img/good5.jpg" class="img-fluid good rounded">
+                    <img src="img/good5.png" class="img-fluid good rounded">
                 </div>
                 <div class="col-sm-6">
                     <div class="half">
@@ -186,10 +192,10 @@
                                                               <!-- 品名與照片 -->
                                                               <div class="row align-items-center">
                                                                 <div class="col-sm-3">
-                                                                    <img src="img/good9.jpg" class="img-fluid" width="50" height="50">
+                                                                    <img src="img/good5.png" class="img-fluid" width="50" height="50">
                                                                 </div>
                                                                 <div class="col-sm ">
-                                                                    <h4>魚池紅玉紅茶</h4>
+                                                                    <h4>杏桃烏龍茶</h4>
                                                                 </div>
                                                               </div>
                                                               <hr>
@@ -230,7 +236,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-sm-1  align-items-center">
-                                                <img src="img/good5.jpg" class="img-fluid" height="75" width="75">
+                                                <img src="img/good5.png" class="img-fluid" height="75" width="75">
                                             </div>
                                             <div class="col-sm">
                                                 <p class="text-secondary"><span class="text-info">XXX</span>評價此商品</p>
@@ -243,7 +249,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-sm-1  align-items-center">
-                                                <img src="img/good5.jpg" class="img-fluid" height="75" width="75">
+                                                <img src="img/good5.png" class="img-fluid" height="75" width="75">
                                             </div>
                                             <div class="col-sm">
                                                 <p class="text-secondary"><span class="text-info">OOO</span>評價此商品</p>
@@ -328,7 +334,7 @@
             </div>
         </section>
     <footer>
-            <div class="container-fluid text-center pt-3 pb-2 bg-info" >
+            <div class="container-fluid text-center pt-3 pb-2 T" >
                 <h4>Copyright &copy 2019 by 第十組</h4>
             </div>
     </footer>
