--- a/TTTEEAAA/allgoods.html
+++ b/TTTEEAAA/allgoods.html
@@ -32,21 +32,19 @@
 
     </style>
 </head>
-<body background="img/1.png">
+<body background="img/bg3.jpg">
   <!-- 回到頂端按鈕 -->
   <button type="button" id="BackTop" class="toTop-arrow"></button>
     <header>
             <!--logo登入註冊-->
-            <div class="container-fluid bg-info">
+            <div class="container-fluid T">
                 <div class="nav  align-items-start ">
                     <nav class="navbar mr-auto" >
                         <a href="index.html"><img src="img/logo1.png" class="img-fluid logosize"
                           onmouseover="this.src='img/logo2.png'" 
                           onmouseout="this.src='img/logo1.png'"></a>
                     </nav>
-                    <nav class="navbar mr-auto" >
-                        <h3 class="text-white">TEA</h3>
-                    </nav>
+                    
                     <button type="button" class="btn dropdown-toggle-split downbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fa fa-bars"></i>
                     </button>
@@ -60,7 +58,7 @@
                 </div>
             </div>
             <!--選單-->
-            <div class="container-fluid bg-info">
+            <div class="container-fluid T">
                     <ul class="nav nav-fill">
                       <li class="nav-item">
                         <a class="nav-link active text-white" href="index.html#HOT"><h4>熱銷商品</h4></a>
@@ -85,30 +83,38 @@
         </header>
     <aside>
         <div class="container-fluid pt-3">
-            <ul class="nav flex-column navbar-sm">
+            <ul class="nav flex-column navbar-sm E">
                 <li class="nav-item">
                     <a href="good1.html" class="text-dark"><h5>愛爾蘭奶油紅茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good2.html" class="text-dark"><h5>南非國寶茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good3.html" class="text-dark"><h5>檸檬香茅茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good4.html" class="text-dark"><h5>薄荷康福茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good5.html" class="text-dark"><h5>杏桃烏龍茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good6.html" class="text-dark"><h5>沁涼薄荷紅茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good7.html" class="text-dark"><h5>粉玫瑰花茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good8.html" class="text-dark"><h5>薰衣草茶</h5></a>
+                    <hr>
                 </li>
                 <li class="nav-item">
                     <a href="good9.html" class="text-dark"><h5>魚池紅玉紅茶</h5></a>
@@ -126,21 +132,21 @@
             <div class="row">
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                    <a href="good1.html"><img src="img/good1.jpg" class="img-fluid goodsize"></a>
+                    <a href="good1.html"><img src="img/good1.png" class="img-fluid goodsize"></a>
                     <hr>
                     <a href="good1.html" class="text-dark">愛爾蘭奶油紅茶</a>
                     <p>NT$100</p>                    
                 </div>
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                   <a href="good2.html"><img src="img/good2.jpg" class="img-fluid goodsize"></a>
+                   <a href="good2.html"><img src="img/good2.png" class="img-fluid goodsize"></a>
                     <hr>
                     <a href="good2.html" class="text-dark">南非國寶茶</a>
                     <p>NT$100</p>
                 </div>
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                        <a href="good3.html"><img src="img/good3.jpg" class="img-fluid goodsize"></a>
+                        <a href="good3.html"><img src="img/good3.png" class="img-fluid goodsize"></a>
                         <hr>
                         <a href="good3.html" class="text-dark">檸檬香茅茶</a>
                         <p>NT$100</p>                    
@@ -150,21 +156,21 @@
             <div class="row pt-5">
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                    <a href="good4.html"><img src="img/good4.jpg" class="img-fluid goodsize"></a>
+                    <a href="good4.html"><img src="img/good4.png" class="img-fluid goodsize"></a>
                     <hr>
                     <a href="good4.html" class="text-dark">薄荷康福茶</a>
                     <p><s>NT$100</s> <span class="text-danger">特價: NT$89</span></p>
                 </div>
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                    <a href="good5.html"><img src="img/good5.jpg" class="img-fluid goodsize"></a>
+                    <a href="good5.html"><img src="img/good5.png" class="img-fluid goodsize"></a>
                     <hr>
                     <a href="good5.html" class="text-dark">杏桃烏龍茶</a>
                     <p>NT$100</p>
                 </div>
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                        <a href="good6.html"><img src="img/good6.jpg" class="img-fluid goodsize"></a>
+                        <a href="good6.html"><img src="img/good6.png" class="img-fluid goodsize"></a>
                         <hr>
                         <a href="good6.html" class="text-dark">沁涼薄荷紅茶</a>
                         <p>NT$100</p>                    
@@ -174,21 +180,21 @@
             <div class="row pt-5">
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                    <a href="good7.html"><img src="img/good7.jpg" class="img-fluid goodsize"></a>
+                    <a href="good7.html"><img src="img/good7.png" class="img-fluid goodsize"></a>
                     <hr>
                     <a href="good7.html" class="text-dark">粉玫瑰花茶</a>
                     <p><s>NT$100</s> <span class="text-danger">特價: NT$89</span></p>
                 </div>
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                    <a href="good8.html"><img src="img/good8.jpg" class="img-fluid goodsize"></a>
+                    <a href="good8.html"><img src="img/good8.png" class="img-fluid goodsize"></a>
                     <hr>
                     <a href="good8.html" class="text-dark">薰衣草茶</a>
                     <p>NT$100</p>
                 </div>
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                        <a href="good9.html"><img src="img/good9.jpg" class="img-fluid goodsize"></a>
+                        <a href="good9.html"><img src="img/good9.png" class="img-fluid goodsize"></a>
                         <hr>
                         <a href="good9.html" class="text-dark">魚池紅玉紅茶</a>
                         <p>NT$100</p>                    
@@ -197,7 +203,7 @@
             </div>
     </section>
     <footer>
-            <div class="container-fluid text-center pt-3 pb-2 bg-info" >
+            <div class="container-fluid text-center pt-3 pb-2 T" >
                 <h4>Copyright &copy 2019 by 第十組</h4>
             </div>
     </footer>
