--- a/resume/index.html
+++ b/resume/index.html
@@ -229,9 +229,9 @@
                     </div>
                   </div>
                   <div class="card pic">
-                    <img src="img/03.JPG" class="card-img-top cardsize">
+                    <a href="https://dicleo.github.io/DEMO/" target="_blank"><img src="img/03.JPG" class="card-img-top cardsize"></a>
                     <div class="card-body basic">
-                      <h5 class="card-text cardtiltleset">中原大學快樂通識手冊</h5>
+                      <a  href="https://dicleo.github.io/DEMO/" target="_blank" style="text-decoration: none; color: black;"><h5 class="card-text cardtiltleset">中原大學快樂通識手冊</h5></a>
                       <p class="card-text cardotherset">--多媒體程式設計期中專案</p>
                       <button type="button" class="btn btn-dark btn-block" data-toggle="modal" data-target="#threeModalLong">
                           了解更多...  </button>
@@ -247,6 +247,7 @@
                                   </div>
                                   <div class="modal-body">
                                       <iframe width="450" height="315" src="https://www.youtube.com/embed/UHRfARTK9z4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                      <a href="https://dicleo.github.io/DEMO/" target="_blank" class="btn btn-primary btn-lg btn-block" role="button">前往網站</a>
                                       <h5>心得:</h5>
                                       <h5>這次的期中專案讓我學到很多，因為有很多東西不太懂，所以在寫的過程會邊查邊寫，不知不覺一個小時、兩個小時就過去了，時間在此時似乎顯得一點都不值錢。網站完成後回頭看還沒開始做網站的自己，發現自己成長了不少，同時也覺得很有成就感，感謝隊友們讓這個網站可以順利的完成</h5>
                                   </div>
