--- a/resume/index.html
+++ b/resume/index.html
@@ -231,7 +231,7 @@
                   <div class="card pic">
                     <a href="https://dicleo.github.io/DEMO/" target="_blank"><img src="img/03.JPG" class="card-img-top cardsize"></a>
                     <div class="card-body basic">
-                      <a  href="https://dicleo.github.io/DEMO/" target="_blank" style="text-decoration: none; color: black;"><h5 class="card-text cardtiltleset">中原大學快樂通識手冊</h5></a>
+                      <h5 class="card-text cardtiltleset">中原大學快樂通識手冊</h5>
                       <p class="card-text cardotherset">--多媒體程式設計期中專案</p>
                       <button type="button" class="btn btn-dark btn-block" data-toggle="modal" data-target="#threeModalLong">
                           了解更多...  </button>
