--- a/resume/index.html
+++ b/resume/index.html
@@ -37,6 +37,11 @@
                   <p class="sl basicsl ">「生命之燈因熱情而點燃，
                     <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     生命之舟因拼搏而前行。」</p>
+                    <a href="https://www.facebook.com/zoe.chen.727" target="_blank"><img src="img/fb.png" class="img-fluid navimg"></a>
+                    <a href="https://www.instagram.com/dicleo727/?hl=zh-tw" target="_blank"><img src="img/ig.png" class="img-fluid navimg"></a>
+                    <a href="https://github.com/dicleo" target="_blank"><img src="img/github.png" class="img-fluid navimg"></a>
+                    <a href="mailto:dicleo0727@gmail.com"><img src="img/mail.png" class="img-fluid navimg"></a>
+                    
                 </div>
                 <div class="col-sm-4">
                   <br>
