--- a/resume/index.html
+++ b/resume/index.html
@@ -173,8 +173,11 @@
           </div>
           <div class="row">
               <div class="card-group">
-                  <div class="card pic">
-                    <img src="img/01.jpg" class="card-img-top cardsize" >
+                  <div class="card">
+                      <div class="pic">
+                          <img src="img/01.jpg" class="card-img-top cardsize" >
+                      </div>
+
                     <div class="card-body basic">
                       <h5 class="card-text cardtiltleset">好膽賣皂</h5>
                       <p class="card-text cardotherset">--台灣肯納基金會</p>
@@ -203,8 +206,11 @@
                         </div>
                     </div>
                   </div>
-                  <div class="card pic">
-                    <img src="img/02.jpg" class="card-img-top cardsize">
+                  <div class="card">
+                    <div class="pic">
+                        <img src="img/02.jpg" class="card-img-top cardsize">
+                    </div>
+
                     <div class="card-body basic ">
                       <h5 class="card-text cardtiltleset">愛資味好ㄘ</h5>
                       <p class="card-text cardotherset">--愛鄰舍協會</p>
@@ -233,8 +239,10 @@
                           </div>
                     </div>
                   </div>
-                  <div class="card pic">
+                  <div class="card">
+                    <div class="pic">
                     <a href="https://dicleo.github.io/DEMO/" target="_blank"><img src="img/03.JPG" class="card-img-top cardsize"></a>
+                    </div>
                     <div class="card-body basic">
                       <h5 class="card-text cardtiltleset">中原大學快樂通識手冊</h5>
                       <p class="card-text cardotherset">--多媒體程式設計期中專案</p>
