--- a/resume/index.html
+++ b/resume/index.html
@@ -156,7 +156,7 @@
               </div>
           </div>
           <div class="row pbset">
-              <div class="col-sm-1 center"><img src="img/HCJ.png" class="icon img-fluid"></div>
+              <div class="col-sm-1 center"><img src="img/html.png" class="icon img-fluid"></div>
               <div class="col-sm">
                   <div id="hcjProgress" class="progress">
                       <div id="hcjBar" class="progress-bar progress-bar-striped progress-bar-animated">
