--- a/resume/index.html
+++ b/resume/index.html
@@ -194,7 +194,7 @@
                                 </button>
                               </div>
                               <div class="modal-body">
-                                  <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F355094608399633%2Fvideos%2F1981804185447599%2F&show_text=0&width=560" width="450" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+                                  <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F355094608399633%2Fvideos%2F1981804185447599%2F&show_text=0&width=560" width="450" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" class="embed-responsive-item" allowTransparency="true" allowFullScreen="true"></iframe>
                                   <h5>心得:</h5>
                                   <h5>做完專案之後回顧，我才發現原來我已經跨越了很多在剛開學時，我覺得我做不到的事情，這讓我想起了很多人曾經說過「做就對了，做了才有可能發現事情沒有那麼難」，我必須承認，這句話是對的，做了才發現其實沒有那麼痛苦，雖然過程中遇到了很多困難，但在一次次度過困難的同時，我們也不停的在成長。</h5>
                               </div>
@@ -259,7 +259,7 @@
                                     </button>
                                   </div>
                                   <div class="modal-body">
-                                      <iframe width="450" height="315" src="https://www.youtube.com/embed/UHRfARTK9z4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                      <iframe width="450" height="315" src="https://www.youtube.com/embed/UHRfARTK9z4" frameborder="0" class="embed-responsive-item" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                       <a href="https://dicleo.github.io/DEMO/" target="_blank" class="btn btn-primary btn-lg btn-block" role="button">前往網站</a>
                                       <h5>心得:</h5>
                                       <h5>這次的期中專案讓我學到很多，因為有很多東西不太懂，所以在寫的過程會邊查邊寫，不知不覺一個小時、兩個小時就過去了，時間在此時似乎顯得一點都不值錢。網站完成後回頭看還沒開始做網站的自己，發現自己成長了不少，同時也覺得很有成就感，感謝隊友們讓這個網站可以順利的完成</h5>
