--- a/TTTEEAAA/aboutus.html
+++ b/TTTEEAAA/aboutus.html
@@ -134,6 +134,7 @@
     <footer>
             <div class="container-fluid text-center pt-3 pb-2 T" >
                 <h4>Copyright &copy 2019 by 第十組</h4>
+                <h5>訪客人數 <span>0</span>人</h5>
             </div>
     </footer>
 
