--- a/TTTEEAAA/useredit.html
+++ b/TTTEEAAA/useredit.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="/Public/css/bootstrap.min.css">
     <link rel="stylesheet" href="/Public/img/main.css">
-
+    <script src="assets/js/star.js" type="text/javascript"></script>
 </head>
 <body background="img/bg3.jpg">
   <!-- 回到頂端按鈕 -->
@@ -131,6 +131,74 @@
                           <td>數量:1</td>
                           <td>價錢:100</td>
                           <td>日期:2019/12/1</td>
+                          <td> 
+                            <!-- 評價按鈕部分 -->
+                            <div class="row pt-2 pb-2 pl-5 pr-5">
+                              <button type="button" class="btn btn-outline-info btn-block" data-toggle="modal" data-target="#good9addfeedback">
+                                  評價商品
+                              </button>
+                            </div>
+                            <!-- 評價按鈕部分結束 -->
+
+                              <!-- 評價表單視窗部分 -->
+                              <div class="modal fade" id="good9addfeedback" tabindex="-1" role="dialog" aria-labelledby="good9addfeedback" aria-hidden="true">
+                                <div class="modal-dialog modal-lg" role="document">
+                                  <div class="modal-content">
+                                    <div class="modal-header">
+                                      <h5 class="modal-title" id="good9addfeedback">商品評論</h5>
+                                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                      </button>
+                                    </div>
+                                    <div class="modal-body">
+                                      <div class="conrainte-fluid">
+                                          <!-- 品名與照片 -->
+                                          <div class="row align-items-center">
+                                            <div class="col-sm-3">
+                                                <img src="img/good9.png" class="img-fluid" width="50" height="50">
+                                            </div>
+                                            <div class="col-sm ">
+                                                <h4>魚池紅玉紅茶</h4>
+                                            </div>
+                                          </div>
+                                          <hr>
+                                          <!-- 品名與照片 結束 -->
+
+                                          <!-- 表單開始 -->
+                                          <form class="was-validated" method="POST">
+                                            <div class="row">
+                                                <div class="col-sm">
+                                                        暱稱：<input type="text" class="form-control is-invalid" required>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                    <div class="col-sm" style="text-align: center;">
+                                                        <br>
+                                                        <p style="text-align: left;">幫商品評個分：</p>
+                                                            <p class="starWrapper" onmouseover="rate(this,event)">
+                                                            <img src="img/nstar.png" title="很爛" />
+                                                            <img src="img/nstar.png" title="一般" />
+                                                            <img src="img/nstar.png" title="還好" />
+                                                            <img src="img/nstar.png" title="較好" />
+                                                            <img src="img/nstar.png" title="很好" />
+                                                    </div>
+                                            </div>
+                                            <div class="row pl-3 pr-3">
+                                                    商品評論：<textarea class="form-control is-invalid" wrap="hard" rows="3" required></textarea>
+                                            </div>
+                                      </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                      <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                                      <button type="submit" class="btn btn-primary">確定評價</button>
+                                    </div>
+                                </form>
+                                <!-- 表單結束 -->
+                                </div>
+                            </div>     
+                          </div>
+                          <!-- 評價表單視窗部分 結束-->
+                          </td>
                         </tr>
                         <tr>
                           <td><img src="img/good7.jpg" width="100px"></td>
@@ -138,6 +206,74 @@
                           <td>數量:1</td>
                           <td>價錢:100</td>
                           <td>日期:2019/12/2</td>
+                          <td>
+                            <!-- 評價按鈕部分 -->
+                            <div class="row pt-2 pb-2 pl-5 pr-5">
+                              <button type="button" class="btn btn-outline-info btn-block" data-toggle="modal" data-target="#good7addfeedback">
+                                  評價商品
+                              </button>
+                            </div>
+                            <!-- 評價按鈕部分結束 -->
+
+                            <!-- 評價表單視窗部分 -->
+                            <div class="modal fade" id="good7addfeedback" tabindex="-1" role="dialog" aria-labelledby="good7addfeedback" aria-hidden="true">
+                                    <div class="modal-dialog modal-lg" role="document">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h5 class="modal-title" id="addfeedback">商品評論</h5>
+                                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                          </button>
+                                        </div>
+                                        <div class="modal-body">
+                                          <div class="conrainte-fluid">
+                                              <!-- 品名與照片 -->
+                                              <div class="row align-items-center">
+                                                <div class="col-sm-3">
+                                                    <img src="img/good7.png" class="img-fluid" width="50" height="50">
+                                                </div>
+                                                <div class="col-sm ">
+                                                    <h4>粉玫瑰花茶</h4>
+                                                </div>
+                                              </div>
+                                              <hr>
+                                              <!-- 品名與照片 結束 -->
+
+                                              <!-- 表單開始 -->
+                                              <form class="was-validated" method="POST">
+                                                <div class="row">
+                                                    <div class="col-sm">
+                                                            暱稱：<input type="text" class="form-control is-invalid" required>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                        <div class="col-sm" style="text-align: center;">
+                                                            <br>
+                                                            <p style="text-align: left;">幫商品評個分：</p>
+                                                                <p class="starWrapper" onmouseover="rate(this,event)">
+                                                                <img src="img/nstar.png" title="很爛" />
+                                                                <img src="img/nstar.png" title="一般" />
+                                                                <img src="img/nstar.png" title="還好" />
+                                                                <img src="img/nstar.png" title="較好" />
+                                                                <img src="img/nstar.png" title="很好" />
+                                                        </div>
+                                                </div>
+                                                <div class="row pl-3 pr-3">
+                                                        商品評論：<textarea class="form-control is-invalid" wrap="hard" rows="3" required></textarea>
+                                                </div>
+                                          </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                          <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                                          <button type="submit" class="btn btn-primary">確定評價</button>
+                                        </div>
+                                    </form>
+                                    <!-- 表單結束 -->
+                                    </div>
+                                </div>     
+                              </div>
+                              <!-- 評價表單視窗部分 結束-->
+                          </td>
                         </tr>
                         <tr>
                           <td><img src="img/good4.jpg" width="100px"></td>
@@ -145,6 +281,74 @@
                           <td>數量:1</td>
                           <td>價錢:100</td>
                           <td>日期:2019/12/3</td>
+                          <td>
+                              <!-- 評價按鈕部分 -->
+                              <div class="row pt-2 pb-2 pl-5 pr-5">
+                                <button type="button" class="btn btn-outline-info btn-block" data-toggle="modal" data-target="#good4addfeedback">
+                                    評價商品
+                                </button>
+                              </div>
+                              <!-- 評價按鈕部分結束 -->
+  
+                              <!-- 評價表單視窗部分 -->
+                              <div class="modal fade" id="good4addfeedback" tabindex="-1" role="dialog" aria-labelledby="good4addfeedback" aria-hidden="true">
+                                      <div class="modal-dialog modal-lg" role="document">
+                                        <div class="modal-content">
+                                          <div class="modal-header">
+                                            <h5 class="modal-title" id="addfeedback">商品評論</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                              <span aria-hidden="true">&times;</span>
+                                            </button>
+                                          </div>
+                                          <div class="modal-body">
+                                            <div class="conrainte-fluid">
+                                                <!-- 品名與照片 -->
+                                                <div class="row align-items-center">
+                                                  <div class="col-sm-3">
+                                                      <img src="img/good4.png" class="img-fluid" width="50" height="50">
+                                                  </div>
+                                                  <div class="col-sm ">
+                                                      <h4>薄荷康福茶</h4>
+                                                  </div>
+                                                </div>
+                                                <hr>
+                                                <!-- 品名與照片 結束 -->
+  
+                                                <!-- 表單開始 -->
+                                                <form class="was-validated" method="POST">
+                                                  <div class="row">
+                                                      <div class="col-sm">
+                                                              暱稱：<input type="text" class="form-control is-invalid" required>
+                                                      </div>
+                                                  </div>
+                                                  <div class="row">
+                                                          <div class="col-sm" style="text-align: center;">
+                                                              <br>
+                                                              <p style="text-align: left;">幫商品評個分：</p>
+                                                                  <p class="starWrapper" onmouseover="rate(this,event)">
+                                                                  <img src="img/nstar.png" title="很爛" />
+                                                                  <img src="img/nstar.png" title="一般" />
+                                                                  <img src="img/nstar.png" title="還好" />
+                                                                  <img src="img/nstar.png" title="較好" />
+                                                                  <img src="img/nstar.png" title="很好" />
+                                                          </div>
+                                                  </div>
+                                                  <div class="row pl-3 pr-3">
+                                                          商品評論：<textarea class="form-control is-invalid" wrap="hard" rows="3" required></textarea>
+                                                  </div>
+                                            </div>
+                                          </div>
+                                          <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                                            <button type="submit" class="btn btn-primary">確定評價</button>
+                                          </div>
+                                      </form>
+                                      <!-- 表單結束 -->
+                                      </div>
+                                  </div>     
+                                </div>
+                                <!-- 評價表單視窗部分 結束-->
+                          </td>
                         </tr>
                       </table>
                       </center>
@@ -335,6 +539,7 @@
         <br>
             <div class="container-fluid text-center pt-3 pb-2 T" >
                 <h4>Copyright &copy 2019 by 第十組</h4>
+                <h5>訪客人數 <span>0</span>人</h5>
             </div>
     </footer>
 
