--- a/TTTEEAAA/index.html
+++ b/TTTEEAAA/index.html
@@ -73,13 +73,13 @@
                             <div class="carousel-inner">
                             	<center>
                                 <div class="carousel-item active">
-                                    <img src="img/b1.png" class="img-thumbnail d-block w-75">
+                                    <img src="img/b1.jpg" class="img-thumbnail d-block w-75">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/b2.png" class="img-thumbnail d-block w-75" >
+                                    <img src="img/b2.jpg" class="img-thumbnail d-block w-75" >
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/b3.png" class="img-thumbnail d-block w-75">
+                                    <img src="img/b3.jpg" class="img-thumbnail d-block w-75">
                                 </div>
                             </center>
                             </div>
